[tool.poetry]
name = "sbpars"
version = "0.1.0"
description = ""
authors = ["qmka <eidolonzx@gmail.com>"]
readme = "README.md"
packages = [{include = "sbpars"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
flake8 = "^6.0.0"

[tool.poetry.scripts]
sbpars = "sbpars.scripts.sbpars:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
